<resources>
    <string name="event_details">Event Details</string>
    <string name="event_friends">Participant Information</string>
    <string name="app_name">Friend Pay Splitter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Event/Activity Name</string>
    <string name="event_date">Event/Activity Date</string>
    <string name="event_description">Event/Activity Description</string>
    <string name="add_participant">Add a Friend</string>
    <string name="create_event">Create Event</string>

    <string name="title_activity_main">Event Cost Splitter</string>

    <string name="title_section1">Create Event</string>
    <string name="title_section2">View Events</string>
    <string name="title_section3">Quick Split</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
