<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="CreateEventFragment"
        android:orientation="vertical"
        android:id="@+id/newEventForm"
    >

    <TextView
        android:id="@+id/eventDetailsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details"
        android:textSize="14pt" />
    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:textSize="12pt"
        android:inputType="textCapWords"
        />

    <LinearLayout
        android:id="@+id/eventDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/eventDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:onClick="showDatePickerDialog"
            android:inputType="date"
            android:layout_weight="5"
            />
        <ImageButton
            android:id="@+id/eventDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_white_36dp"
            android:onClick="showDatePickerDialog"
            android:background="@android:color/transparent"
            android:contentDescription="@string/event_description"
            android:layout_weight="1"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="100pt"
        android:hint="@string/event_description"
        android:inputType="textMultiLine"
        android:lines="10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_friends"
        android:textSize="14pt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_participant"
        android:onClick="addParticipant"/>





</LinearLayout>

</ScrollView>
